--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
-spring.application.name=backend
+spring.application.name=mil-sabores-backend
+
+
+                          # acá tiene que ir el nombre 🔽 de nuestra bbd QUE NO ES ESTE PORQUE NO LA HEMOS CREADO AÚN
+spring.datasource.url=jdbc:mysql://localhost:3306/milsabores?useSSL=false&serverTimezone=UTC
+                        
+spring.datasource.username=root
+spring.datasource.password=mil-sabores-backend
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Opcional: logs más detallados
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Desactivar seguridad temporalmente (solo desarrollo)
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
