Correcciones menores pero no totales, veo lo de la bbdd

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=mil-sabores-backend
 
 
-                          # acá tiene que ir el nombre 🔽 de nuestra bbd QUE NO ES ESTE PORQUE NO LA HEMOS CREADO AÚN
-spring.datasource.url=jdbc:mysql://localhost:3306/milsabores?useSSL=false&serverTimezone=UTC
+                          #          ESTE ES EL MÍO DE MI BBDD PROVISORIA
+spring.datasource.url=jdbc:mysql://localhost:3306/mil_sabores
                         
 spring.datasource.username=root
-spring.datasource.password=mil-sabores-backend
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
