Todo sobre autentificación, parte 1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,10 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Desactivar seguridad temporalmente (solo desarrollo)
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
+
+# para el JWT
+app.jwt.secret=SuperClaveUltraMegaLargaDeMilSaboresParaJWT2025ABC123456789
+app.jwt.expiration=3600000
+# 1 hora en milisegundos
